fixed gaps between canvas and tools, made buttons more aesthetic

--- a/src/styles/CustomCard.css
+++ b/src/styles/CustomCard.css
@@ -19,17 +19,26 @@
 }
 
 .custom-card-page button {
+    background: none;
+    box-shadow: none;
     font-size: 15px;
     display: block;
     margin: 10px 0px 0px 15px;
 }
 
+.card-name-input {
+    border-radius: 10px;
+    border: 2px solid rgb(114, 195, 197);
+    font-family: Nunito Sans;
+    margin-left: 20px;
+}
 .draw-canvas {
     border-radius: 10px;
     border: 2px solid rgb(114, 195, 197);
     cursor: crosshair;
     display: block;
-    margin: 10px auto;
+    margin: 5px auto;
+    margin-left: -2px;
 }
 
 .color-swatch {
@@ -53,18 +62,17 @@
     flex-direction: row;
     align-items: center;
     justify-content: center;
-    gap: 0px;  /* reduced from 10px */
 }
 
 .toolbar {
     display: flex;
     flex-direction: column;
     align-items: center;
-    gap: 20px;
+    gap: 10px;
 }
 
 .toolbar button {
-    background: none;
+    background: none;   
     border: none;
     box-shadow: none;
     padding-left: 30px;
@@ -82,5 +90,4 @@
     display: flex;
     flex-direction: row;
     justify-content: center;
-    gap: 4px;
 }   
